<resources>
    <string name="app_name">Shop</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="ibay">iBay</string>
    <string name="password">Password</string>
    <string name="main_menu">Main Menu</string>
    <string name="welcome_user">Welcome, user!</string>
    <string name="search">Search</string>
    <string name="order_history">Order History</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel">Cancel</string>
    <string name="admin">Admin</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_question">Sign Out?</string>
    <string name="delete_account_question">Delete Account?</string>
    <string name="create">Create</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_an_item">Add An Item</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="view_existing_items">View Existing Items</string>
    <string name="remove_an_item">Remove An Item</string>
    <string name="view_existing_users">View Existing Users</string>
    <string name="all_existing_users">All Existing Users</string>
    <string name="x">X</string>
    <string name="item_information">Item Information</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_location">Item Location</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_description">Item Description</string>
    <string name="all_items">All Items</string>
    <string name="dismiss">Dismiss</string>
    <string name="remove_item">Remove Item</string>
    <string name="select_a_item">Search for an item.</string>
    <string name="remove">Remove</string>
    <string name="search_for_an_item">Search For An Item</string>
    <string name="buy">Buy</string>
    <string name="no_items_ordered_yet">No items ordered yet.</string>
    <string name="please_select_an_order_to_cancel">Please select an order to cancel.</string>
    <string name="modify_an_item">Modify An Item</string>
    <string name="modify">Modify</string>
</resources>