<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/admin_page_welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="30sp"
        android:text="@string/welcome_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_page_likeToDo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:text="@string/what_would_you_like_to_do"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_page_welcome_textView" />

    <Button
        android:id="@+id/admin_page_addAnItem_button"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#000000"
        android:text="@string/add_an_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_page_likeToDo_textView" />

    <Button
        android:id="@+id/admin_page_viewExistingItems_button"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#000000"
        android:text="@string/view_existing_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_page_addAnItem_button" />

    <Button
        android:id="@+id/admin_page_removeAnItem_button"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000000"
        android:text="@string/remove_an_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_page_viewExistingItems_button" />

    <Button
        android:id="@+id/admin_page_viewExistingUsers_button"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000000"
        android:text="@string/view_existing_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_page_removeAnItem_button" />

    <Button
        android:id="@+id/admin_page_back_button"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2196F3"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>