<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/create_account_page_iBay_textView"
        android:layout_width="245dp"
        android:layout_height="99dp"
        android:layout_marginTop="16dp"
        android:text="@string/ibay"
        android:gravity="center"
        android:textSize="55sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_account_page_createAccount_textView"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_page_iBay_textView" />

    <EditText
        android:id="@+id/create_account_page_username_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_page_createAccount_textView" />

    <EditText
        android:id="@+id/create_account_page_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_page_username_editText" />

    <Button
        android:id="@+id/create_account_page_create_button"
        android:layout_width="114dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000000"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_page_password_editText" />

    <Button
        android:id="@+id/create_account_page_back_button"
        android:layout_width="114dp"
        android:layout_height="65dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#000000"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_page_create_button" />
</androidx.constraintlayout.widget.ConstraintLayout>