<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#005293">

    <TextView
        android:id="@+id/modify_item_page_modifyItem_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modify_an_item"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modify_item_page_selectAnItemTomodify_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:text="@string/select_a_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_item_page_modifyItem_textView" />

    <AutoCompleteTextView
        android:id="@+id/modify_item_page_item_dropDownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_item_page_selectAnItemTomodify_textView" />

    <Button
        android:id="@+id/modify_item_page_modify_button"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#005293"
        android:stateListAnimator="@null"
        android:text="@string/modify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_item_page_item_dropDownMenu" />

    <Button
        android:id="@+id/modify_item_page_cancel_button"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#005293"
        android:stateListAnimator="@null"
        android:text="@string/cancel_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_item_page_item_dropDownMenu" />
</androidx.constraintlayout.widget.ConstraintLayout>