<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#005293">

    <EditText
        android:id="@+id/add_item_page_itemName_editText"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_page_addItem_textView" />

    <EditText
        android:id="@+id/add_item_page_itemLocation_editText"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/item_location"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_page_itemPrice_editText" />

    <EditText
        android:id="@+id/add_item_page_itemQuantity_editText"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/item_quantity"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_page_itemLocation_editText" />

    <EditText
        android:id="@+id/add_item_page_itemPrice_editText"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/item_price"
        android:inputType="number|numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_page_itemName_editText" />

    <EditText
        android:id="@+id/add_item_page_itemDescription_editText"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/item_description"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_page_itemQuantity_editText" />

    <TextView
        android:id="@+id/add_item_page_addItem_textView"
        android:layout_width="245dp"
        android:layout_height="99dp"
        android:layout_marginTop="16dp"
        android:text="@string/item_information"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/add_item_page_additem_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#005293"
        android:stateListAnimator="@null"
        android:text="Add "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_page_itemDescription_editText" />

    <Button
        android:id="@+id/add_item_page_cancelitem_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#005293"
        android:stateListAnimator="@null"
        android:text="Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_page_itemDescription_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>